--- a/production/login.html
+++ b/production/login.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Megakit - HTML5 Theme</title>
+        <title>IT-Expo Pendidikan Informatika UNJ</title>
         <meta name="keywords" content="HTML5 Theme" />
         <meta name="description" content="Megakit - HTML5 Theme">
         <meta name="author" content="keenthemes.com">
@@ -27,7 +27,7 @@
         <link href="css/global/global.css" rel="stylesheet" type="text/css"/>
 
         <!-- Favicon -->
-        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="img/general.png" type="image/x-icon">
         <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     </head>
     <!-- End Head -->
@@ -88,19 +88,13 @@
                 <!-- Action -->
                 <ul class="list-inline s-header__action s-header__action--rb">
                     <li class="s-header__action-item">
-                        <a class="s-header__action-link" href="#">
-                            <i class="g-padding-r-5--xs ti-facebook"></i>
-                            <span class="g-display-none--xs g-display-inline-block--sm">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="s-header__action-item">
-                        <a class="s-header__action-link" href="#">
+                        <a class="s-header__action-link" href="mailto:it.fest.unj@gmail.com">
                             <i class="g-padding-r-5--xs ti-twitter"></i>
-                            <span class="g-display-none--xs g-display-inline-block--sm">Twitter</span>
+                            <span class="g-display-none--xs g-display-inline-block--sm">it.fest.unj@gmail.com</span>
                         </a>
                     </li>
                     <li class="s-header__action-item">
-                        <a class="s-header__action-link" href="#">
+                        <a class="s-header__action-link" href="https://instagram.com/itexpo_unj">
                             <i class="g-padding-r-5--xs ti-instagram"></i>
                             <span class="g-display-none--xs g-display-inline-block--sm">Instagram</span>
                         </a>
@@ -255,22 +249,32 @@
                 <div class="g-text-center--xs g-margin-b-60--xs">
                     <h2 class="text-uppercase g-font-weight--700 g-color--white-opacity g-letter-spacing--2 g-margin-b-25--xs">Registrasi</h2>
                 </div>
-                <form class="center-block g-width-500--sm g-width-550--md">
+                <form class="center-block g-width-500--sm g-width-550--md" id="form-register">
                     <div class="g-margin-b-30--xs">
-                        <input type="text" class="form-control s-form-v3__input" placeholder="* Nama Lengkap">
+                        <input type="text" class="form-control s-form-v3__input" placeholder="* Nama Lengkap" name="nama">
                     </div>
                     <div class="g-margin-b-30--xs">
-                        <input type="email" class="form-control s-form-v3__input" placeholder="* Email">
+                        <input type="email" class="form-control s-form-v3__input" placeholder="* Email" name="email">
                     </div>
                     <div class="g-margin-b-30--xs">
-                        <input type="text" class="form-control s-form-v3__input" placeholder="* Handphone">
+                        <input type="text" class="form-control s-form-v3__input" placeholder="* Nomor Telepon" name="kontak">
+                    </div>
+                    <div class="g-margin-b-30--xs">
+                        <select class="form-control s-form-v3__input" name="is_mahasiswa">
+                            <option value="" selected disabled>-- Status --</option>
+                            <option value="1">Mahasiswa</option>
+                            <option value="0">Umum</option>
+                        </select>
+                    </div>
+                    <div class="g-margin-b-30--xs">
+                        <input type="text" class="form-control s-form-v3__input" placeholder="* Instansi/Universitas" name="instansi">
                     </div>
                     <div class="row g-margin-b-50--xs">
                         <div class="col-sm-6 g-margin-b-30--xs g-margin-b-0--md">
-                            <input type="password" class="form-control s-form-v3__input" placeholder="* Password">
+                            <input type="password" class="form-control s-form-v3__input" placeholder="* Password" name="password">
                         </div>
                         <div class="col-sm-6">
-                            <input type="password" class="form-control s-form-v3__input" placeholder="* Konfirmasi Password">
+                            <input type="password" class="form-control s-form-v3__input" placeholder="* Konfirmasi Password" name="password_confirm">
                         </div>
                     </div>
                     <div class="g-text-center--xs">
@@ -298,10 +302,8 @@
                         </div>
                         <div class="col-sm-2 g-margin-b-20--xs g-margin-b-0--md">
                             <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-0--xs">
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Twitter</a></li>
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Facebook</a></li>
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Instagram</a></li>
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">YouTube</a></li>
+                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="mailto:it.fest.unj@gmail.com">it.fest.unj@gmail.com</a></li>
+                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="https://instagram.com/itexpo_unj">Instagram</a></li>
                             </ul>
                         </div>
                         <div class="col-sm-2 g-margin-b-40--xs g-margin-b-0--md">
