--- a/production/user-dash.html
+++ b/production/user-dash.html
@@ -32,7 +32,7 @@
     <!-- <link href="css/theme/red.css" rel="stylesheet" type="text/css" /> -->
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo-itexpo-white.png" type="image/x-icon">
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
@@ -106,19 +106,13 @@
             <!-- Action -->
             <ul class="list-inline s-header__action s-header__action--rb">
                 <li class="s-header__action-item">
-                    <a class="s-header__action-link" href="#">
-                        <i class="g-padding-r-5--xs ti-facebook"></i>
-                        <span class="g-display-none--xs g-display-inline-block--sm">Facebook</span>
-                    </a>
-                </li>
-                <li class="s-header__action-item">
-                    <a class="s-header__action-link" href="#">
+                    <a class="s-header__action-link" href="mailto:it.fest.unj@gmail.com">
                         <i class="g-padding-r-5--xs ti-twitter"></i>
-                        <span class="g-display-none--xs g-display-inline-block--sm">Twitter</span>
+                        <span class="g-display-none--xs g-display-inline-block--sm">it.fest.unj@gmail.com</span>
                     </a>
                 </li>
                 <li class="s-header__action-item">
-                    <a class="s-header__action-link" href="#">
+                    <a class="s-header__action-link" href="https://instagram.com/itexpo_unj">
                         <i class="g-padding-r-5--xs ti-instagram"></i>
                         <span class="g-display-none--xs g-display-inline-block--sm">Instagram</span>
                     </a>
@@ -141,15 +135,13 @@
                     <h1 class="text-uppercase g-font-size-26--xs g-font-size-22--md g-font-size-36--lg g-color--white g-letter-spacing--1 g-margin-b-0--xs" id="nama-user">Username</h1>
                     <p class="text-uppercase g-font-size-18--xs g-font-size-14--md g-font-size-20--lg g-font-weight--300 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="nama-instansi">Asal Instansi</p>
                     <p class="g-font-size-18--xs g-font-size-14--md g-font-size-16--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="email">email_user@itexpo.co.id</p>
-                    <a href="" class="cbp-lightbox s-btn s-btn--xs s-btn--white-brd g-radius--50 g-margin-t-5--xs" style="padding: 0.25rem 0.75rem" data-title="Poster" data-toggle="modal" data-target="#modal-poster" id="r-po">
-                            Edit Profil
-                        </a>
+                    <a class="cbp-lightbox s-btn s-btn--xs s-btn--white-brd g-radius--50 g-margin-t-5--xs" style="padding: 0.25rem 0.75rem" data-title="Profil" data-toggle="modal" data-target="#modal-profil" id="r-po">Edit Profil</a>
+                    <a class="cbp-lightbox s-btn s-btn--xs s-btn--white-brd g-radius--50 g-margin-t-5--xs" style="padding: 0.25rem 0.75rem" data-title="KTM" data-toggle="modal" data-target="#modal-ktm" id="r-po">Unggah KTM</a>
                 </div>
                 <div class="col-sm-3 g-text-left--md g-text-center--xs g-margin-t-20--xs g-margin-t-0--md">
                     <p class="g-font-size-12--xs g-font-size-12--md g-font-size-14--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id=""><span class="g-font-size-26--xs" id="kegiatan-user">0</span> Kegiatan Diikuti</p>
                     <p class="g-font-size-12--xs g-font-size-12--md g-font-size-14--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id=""><span class="g-font-size-26--xs" id="not-verified">0</span> Menunggu Verifikasi</p>
                     <p class="g-font-size-12--xs g-font-size-12--md g-font-size-14--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id=""><span class="g-font-size-26--xs" id="verivied">0</span> Selesai Verifikasi</p>
-
                 </div>
             </div>
 
@@ -436,7 +428,10 @@
     <!-- End Plan -->
 
     <!-- Parallax -->
-    <div class="js__parallax-window" style="background: url(img/ml.jpg) 50% 0 no-repeat fixed;">
+    <div class="js__parallax-window" style="background: linear-gradient(
+        rgba(0, 220, 255, 0.45), 
+        rgba(0, 220, 255, 0.45)
+      ), url(img/mobile_legends.jpg) repeat; background-size: 300px 150px">
         <div class="container g-text-center--xs g-padding-y-80--xs g-padding-y-125--sm">
             <div class="g-margin-b-80--xs">
                 <h2 class="g-font-size-40--xs g-font-size-50--sm g-font-size-60--md g-color--white">e-Sports - Mobile Legends</h2>
@@ -509,10 +504,8 @@
                     </div>
                     <div class="col-sm-2 g-margin-b-20--xs g-margin-b-0--md">
                         <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-0--xs">
-                            <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Twitter</a></li>
-                            <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Facebook</a></li>
-                            <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">Instagram</a></li>
-                            <li><a class="g-font-size-15--xs g-color--white-opacity" href="#">YouTube</a></li>
+                            <li><a class="g-font-size-15--xs g-color--white-opacity" href="mailto:it.fest.unj@gmail.com">it.fest.unj@gmail.com</a></li>
+                            <li><a class="g-font-size-15--xs g-color--white-opacity" href="https://instagram.com/itexpo_unj">Instagram</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-2 g-margin-b-40--xs g-margin-b-0--md">
@@ -579,14 +572,34 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="text-uppercase g-font-size-20--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-0--xs">Konfirmasi</h4>
+                    <h4 class="text-uppercase g-font-size-20--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-0--xs">Daftar Desain Web</h4>
                 </div>
                 <div class="modal-body g-margin-t-30--xs" style="overflow: hidden;">
-                    <p>Apakah Anda yakin ingin melanjutkan registrasi kompetisi Desain Web?</p>
+                    <form class="center-block g-width-500--sm g-width-550--md" id="form-register-webdesain">
+                        <div class="g-margin-b-30--xs">
+                            <select class="form-control s-form-v4__input" name="is_team">
+                                <option value="" selected disabled>-- Tim/Individu --</option>
+                                <option value="1">Tim</option>
+                                <option value="0">Individu</option>
+                            </select>
+                        </div>
+                        <div class="g-margin-b-30--xs">
+                            <input type="text" class="form-control s-form-v4__input" placeholder="* Nama Tim" name="team_name">
+                        </div>
+                        <div class="g-margin-b-30--xs">
+                            <input type="text" class="form-control s-form-v4__input" placeholder="* Anggota Tim 1" name="team_member_1">
+                        </div>
+                        <div class="g-margin-b-30--xs">
+                            <input type="text" class="form-control s-form-v4__input" placeholder="* Anggota Tim 2" name="team_member_2">
+                        </div>
+                        <div class="g-margin-b-30--xs">
+                            <input type="text" class="form-control s-form-v4__input" placeholder="* Anggota Tim 3" name="team_member_3">
+                        </div>
+                    </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--white-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" data-toggle="modal" data-target="#modal-web">Batal</button>
-                    <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" id="submit-web">Submit</button>
+                    <button type="submit" form="form-register-webdesain" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" id="submit-web">Submit</button>
                 </div>
             </div>
         </div>
@@ -630,7 +643,7 @@
                     <h4 class="text-uppercase g-font-size-20--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-0--xs">Konfirmasi</h4>
                 </div>
                 <div class="modal-body g-margin-t-30--xs" style="overflow: hidden;">
-                    <p>Apakah Anda yakin ingin melanjutkan registrasi kompetisi Jaringan?</p>
+                    <p>Apakah Anda yakin ingin melanjutkan registrasi kompetisi Networking?</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--white-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" data-toggle="modal" data-target="#modal-jaringan">Batal</button>
@@ -677,7 +690,21 @@
                     <h4 class="text-uppercase g-font-size-20--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-0--xs">Konfirmasi</h4>
                 </div>
                 <div class="modal-body g-margin-t-30--xs" style="overflow: hidden;">
-                    <p>Apakah Anda yakin ingin melanjutkan registrasi kompetisi Short Movie?</p>
+                    <form class="center-block g-width-500--sm g-width-550--md" id="form-register-webdesain">
+                        <input type="hidden" class="form-control s-form-v4__input" name="is_team" value="1"/>
+                        <div class="g-margin-b-30--xs">
+                            <input type="text" class="form-control s-form-v4__input" placeholder="* Nama Tim" name="team_name">
+                        </div>
+                        <div class="g-margin-b-30--xs">
+                            <input type="text" class="form-control s-form-v4__input" placeholder="* Anggota Tim 1" name="team_member_1">
+                        </div>
+                        <div class="g-margin-b-30--xs">
+                            <input type="text" class="form-control s-form-v4__input" placeholder="* Anggota Tim 2" name="team_member_2">
+                        </div>
+                        <div class="g-margin-b-30--xs">
+                            <input type="text" class="form-control s-form-v4__input" placeholder="* Anggota Tim 3" name="team_member_3">
+                        </div>
+                    </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--white-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" data-toggle="modal" data-target="#modal-movie">Batal</button>
@@ -771,11 +798,28 @@
                     <h4 class="text-uppercase g-font-size-20--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-0--xs">Konfirmasi</h4>
                 </div>
                 <div class="modal-body g-margin-t-30--xs" style="overflow: hidden;">
-                    <p>Apakah Anda yakin ingin melanjutkan registrasi kompetisi e-Sports - Mobile Legends?</p>
+                    <form class="center-block g-width-500--sm g-width-550--md" id="form-register-esports">
+                        <input type="hidden" class="form-control s-form-v4__input" name="is_team" value="1"/>                        
+                        <div class="g-margin-b-30--xs">
+                            <input type="text" class="form-control s-form-v4__input" placeholder="* Nama Tim" name="team_name">
+                        </div>
+                        <div class="g-margin-b-30--xs">
+                            <input type="text" class="form-control s-form-v4__input" placeholder="* Anggota Tim 1" name="team_member_1">
+                        </div>
+                        <div class="g-margin-b-30--xs">
+                            <input type="text" class="form-control s-form-v4__input" placeholder="* Anggota Tim 2" name="team_member_2">
+                        </div>
+                        <div class="g-margin-b-30--xs">
+                            <input type="text" class="form-control s-form-v4__input" placeholder="* Anggota Tim 3" name="team_member_3">
+                        </div>
+                        <div class="g-margin-b-30--xs">
+                            <input type="text" class="form-control s-form-v4__input" placeholder="* Anggota Tim 4" name="team_member_4">
+                        </div>
+                    </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--white-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" data-toggle="modal" data-target="#modal-esport">Batal</button>
-                    <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" id="submit-esport">Submit</button>
+                    <button type="submit" form="form-register-esports" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" id="submit-esport">Submit</button>
                 </div>
             </div>
         </div>
@@ -920,6 +964,76 @@
                 <div class="modal-footer">
                     <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--white-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" data-toggle="modal" data-target="#modal-seminar">Batal</button>
                     <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" id="submit-seminar">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Profil -->
+    <div class="modal fade" id="modal-profil" tabindex="-1" role="dialog" aria-labelledby="modalPosterLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-0--xs">Ubah Profil</p>
+                </div>
+                <div class="modal-body g-margin-t-30--xs" style="overflow: hidden;">
+                    <form class="center-block g-width-500--sm g-width-550--md" id="form-profil">
+                        <div class="g-margin-b-30--xs">
+                            <input type="text" class="form-control s-form-v4__input" placeholder="* Nama Lengkap" name="nama">
+                        </div>
+                        <div class="g-margin-b-30--xs">
+                            <input type="email" class="form-control s-form-v4__input" placeholder="* Email" name="email">
+                        </div>
+                        <div class="g-margin-b-30--xs">
+                            <input type="text" class="form-control s-form-v4__input" placeholder="* Nomor Telepon" name="kontak">
+                        </div>
+                        <div class="g-margin-b-30--xs">
+                            <select class="form-control s-form-v4__input" name="is_mahasiswa">
+                                <option value="" selected disabled>-- Status --</option>
+                                <option value="1">Mahasiswa</option>
+                                <option value="0">Umum</option>
+                            </select>
+                        </div>
+                        <div class="g-margin-b-30--xs">
+                            <input type="text" class="form-control s-form-v4__input" placeholder="* Instansi/Universitas" name="instansi">
+                        </div>
+                        <div class="row g-margin-b-50--xs">
+                            <div class="col-sm-6 g-margin-b-30--xs g-margin-b-0--md">
+                                <input type="password" class="form-control s-form-v4__input" placeholder="* Password" name="password">
+                            </div>
+                            <div class="col-sm-6">
+                                <input type="password" class="form-control s-form-v4__input" placeholder="* Konfirmasi Password" name="password_confirm">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" form="form-profil" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs">Simpan</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal KTM -->
+    <div class="modal fade" id="modal-ktm" tabindex="-1" role="dialog" aria-labelledby="modalPosterLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-0--xs">Unggah KTM</p>
+                </div>
+                <div class="modal-body g-margin-t-30--xs" style="overflow: hidden;">
+                    <img src="img/web-desain-1.gif" style="max-height: 150px; width: auto; margin: auto" alt="KTM Image">
+                    <hr/>
+                    <form class="center-block g-width-500--sm g-width-550--md" id="form-ktm">
+                        <div class="g-margin-b-30--xs">
+                            <input type="file" class="form-control s-form-v4__input" placeholder="* Unggah KTM" name="file">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" form="form-ktm" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs">Simpan</button>
                 </div>
             </div>
         </div>
