--- a/production/index.html
+++ b/production/index.html
@@ -23,9 +23,9 @@
         <link href="vendor/swiper/swiper.min.css" rel="stylesheet" type="text/css"/>
         <link href="vendor/cubeportfolio/css/cubeportfolio.min.css" rel="stylesheet" type="text/css"/>
 
-        <!-- Theme Styles -->
-        <link href="css/style.css" rel="stylesheet" type="text/css"/>
-        <link href="css/global/global.css" rel="stylesheet" type="text/css"/>
+            <!-- Theme Styles -->
+            <link href="css/style.css" rel="stylesheet" type="text/css"/>
+            <link href="css/global/global.css" rel="stylesheet" type="text/css"/>
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -78,19 +78,19 @@
                             <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index_events.html">Kegiatan</a></li>
                             <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="about.html">Tentang Kami</a></li>
                             <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="contacts.html">Kontak Kami</a></li>
-							<li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">SignIn/SignUp</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">SignOut</a></li>
-                        </ul>
-                        <!-- End Menu List -->
-                        <!-- Menu List -->                                
-                        <ul class="list-unstyled s-header__nav-menu">
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="user-dash.html">Kegiatan dan Pendaftaran</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="verifikasi.html">Verifikasi Pembayaran</a></li>
+							<li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">Login</a></li>
                         </ul>
                         <!-- End Menu List -->
                     </div>
                 </nav>
                 <!-- End Nav -->
+                
+                <!-- Action -->
+                <ul class="list-inline s-header__action s-header__action--lb">
+                    <li class="s-header__action-item"><a class="s-header__action-link -is-active" href="#">En</a></li>
+                    <li class="s-header__action-item"><a class="s-header__action-link" href="#">Fr</a></li>
+                </ul>
+                <!-- End Action -->
 
                 <!-- Action -->
                 <ul class="list-inline s-header__action s-header__action--rb">
@@ -130,6 +130,9 @@
 								IT EXPO<br>Pendidikan Teknik Informatika</br>Universitas Negeri Jakarta
 							</h1>
                         </div>
+                        <!--<a class="js__popup__youtube" href="https://www.youtube.com/watch?v=lcFYdgZKZxY" title="Intro Video">
+                            <i class="s-icon s-icon--lg s-icon--white-bg g-radius--circle ti-control-play"></i>
+                        </a>-->
                     </div>
                 </div>
                 <div class="g-fullheight--xs g-bg-position--center swiper-slide" style="background: url('img/1920x1080/01.jpg');">
@@ -138,6 +141,9 @@
                             <div class="g-margin-b-30--xs">
                                 <h2 class="g-font-size-35--xs g-font-size-45--sm g-font-size-55--md g-color--white">Revolusi IT<br>untuk Pendidikan <br>di Era Revolusi Industri 4.0</h2>
                             </div>
+                            <!--<a class="js__popup__youtube" href="https://www.youtube.com/watch?v=lcFYdgZKZxY" title="Intro Video">
+                                <i class="s-icon s-icon--lg s-icon--white-bg g-radius--circle ti-control-play"></i>
+                            </a>-->
                         </div>
                     </div>
                 </div>
@@ -163,7 +169,7 @@
                 <h2 class="g-font-size-32--xs g-font-size-36--md">We Create Beautiful Experiences <br> That Drive Successful Businesses.</h2>
             </div>
             <div class="row g-margin-b-60--xs g-margin-b-40--md">
-                <div class="col-sm-4 g-margin-b-60--xs g-margin-b-0--md">
+                <div class="col-sm-3 g-margin-b-60--xs g-margin-b-0--md">
                     <div class="clearfix">
                         <div class="g-media g-width-30--xs">
                             <div class="wow fadeInDown" data-wow-duration=".3" data-wow-delay=".1s">
@@ -176,7 +182,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 g-margin-b-60--xs g-margin-b-0--md">
+                <div class="col-sm-3 g-margin-b-60--xs g-margin-b-0--md">
                     <div class="clearfix">
                         <div class="g-media g-width-30--xs">
                             <div class="wow fadeInDown" data-wow-duration=".3" data-wow-delay=".2s">
@@ -189,7 +195,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <div class="clearfix">
                         <div class="g-media g-width-30--xs">
                             <div class="wow fadeInDown" data-wow-duration=".3" data-wow-delay=".3s">
@@ -198,6 +204,19 @@
                         </div>
                         <div class="g-media__body g-padding-x-20--xs">
                             <h3 class="g-font-size-18--xs">Kegiatan</h3>
+                            <p class="g-margin-b-0--xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                </div>
+				<div class="col-sm-3">
+                    <div class="clearfix">
+                        <div class="g-media g-width-30--xs">
+                            <div class="wow fadeInDown" data-wow-duration=".3" data-wow-delay=".3s">
+                                <i class="g-font-size-28--xs g-color--primary ti-ruler-alt-2"></i>
+                            </div>
+                        </div>
+                        <div class="g-media__body g-padding-x-20--xs">
+                            <h3 class="g-font-size-18--xs">Pembicara</h3>
                             <p class="g-margin-b-0--xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                     </div>
@@ -243,6 +262,7 @@
                         </div>
                     </div>
                 </div>
+                <!--<a href="http://keenthemes.com/" class="text-uppercase s-btn s-btn--md s-btn--white-brd g-radius--50">Learn More</a>-->
             </div>
         </div>
         <!-- End Parallax -->
@@ -372,6 +392,13 @@
             </div>
         </div>
         <!-- End Clients -->
+		
+
+        <!-- Google Map -->
+        <!--<section class="s-google-map">
+            <div id="js__google-container" class="s-google-container g-height-400--xs"></div>
+        </section>-->
+        <!-- End Google Map -->
         <!--========== END PAGE CONTENT ==========-->
 
 		
@@ -414,9 +441,7 @@
                         <h4 class="s-header__logo-img s-header__logo-img-default" style="color:#13b1cd;">IT-EXPO</h4>
                     </div>
                     <div class="col-xs-6 g-text-right--xs">
-                        <p class="g-font-size-14--xs g-margin-b-0--xs g-color--white-opacity-light">
-                            Powered by: <a href="http://www.keenthemes.com/">KeenThemes.com</a>
-                        </p>
+                        <p class="g-font-size-14--xs g-margin-b-0--xs g-color--white-opacity-light">Powered by: UNJ</p>
                     </div>
                 </div>
             </div>
